--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 
 <h1>Hello World!</h1>
+<div><img scr="img_hello_world.jgp" alt="Hello World from space"
+style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 
