--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ls<! DOCTYPE HTML>
+<! DOCTYPE HTML>
 <html>
 <head>
 <title>Hello World!</title>
@@ -8,10 +8,8 @@ ls<! DOCTYPE HTML>
 
 
 <h1>Hello World!</h1>
-<div><img scr="img_hello_world.jgp" alt="Hello World from space"
-style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
-<p>A new line in our file!</p>
+<p>This line is here to show how merging works</p>
 
 </body>
 </html>
