--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works</p>
 
+<p>This is for emergency fix2</p>
 </body>
 </html>
