--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@ style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 <p>Adding a new line on 17 Sept</p>
+
+<div><img scr="Island.jgp" alt="Beautiful island"
+style="width:100%;max-width:960px"></div>
+
 </body>
 </html>
