--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@ style="width:100%;max-width:960px"></div>
 
 <p>This line is here to show how merging works.</p>
 
+  
+<p>This line is been added on GitHub for new branch -html-skeleton </p>
 </body>
 </html>
